@@ -1,5 +1,6 @@
 * Aug  9 2014 Massimiliano Pala <madwolf@openca.org>
 - Optimized OCSP req and resp internal handling functions
+- Added PKI_X509_CERT_check_key() to verify that the same pubkey is in cert and key
 
 * Aug  6 2014 Massimiliano Pala <madwolf@openca.org>
 - Added additional checks for OCSP response signing
